third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_index_fail.exp

Diagnostics:
error: syntax item restricted to spec contexts
  ┌─ tests/more-v1/parser/spec_parsing_index_fail.move:3:15
  │
3 │       let _ = x[1];
  │               ^^^^ `_[_]` index operator only allowed in specifications
